# protocol-codegen

./: .gitignore  MIGRATION_STATUS.md  Makefile  NEXT_STEPS.md  PHASE2_STATUS.md  README.md  ROADMAP.md  STRUCTURE.md  pyproject.toml  test_example.py  test_gen.py
examples/simple-sensor-network/: .gitignore  MESSAGES.md  README.md  STRUCTURE.txt  plugin_paths.py  protocol_config.py
examples/simple-sensor-network/field/: __init__.py  color.py  network.py  sensor.py
examples/simple-sensor-network/message/: __init__.py  network.py  sensor.py
src/protocol_codegen/: __init__.py  __main__.py  cli.py
src/protocol_codegen/core/: __init__.py  allocator.py  field.py  field.pyi  importer.py  loader.py  message.py  stub_generator.py  types.py  validator.py
src/protocol_codegen/generators/cpp/: __init__.py  callbacks_generator.py  constants_generator.py  decoder_generator.py  decoder_registry_generator.py  encoder_generator.py  logger_generator.py  message_structure_generator.py  messageid_generator.py  struct_generator.py
src/protocol_codegen/generators/java/: __init__.py  callbacks_generator.py  constants_generator.py  decoder_generator.py  decoder_registry_generator.py  encoder_generator.py  logger_generator.py  message_structure_generator.py  messageid_generator.py  struct_generator.py
src/protocol_codegen/methods/sysex/: __init__.py  builtin_config.py  config.py  generator.py
