[project]
name = "protocol-codegen"
version = "1.0.0"
description = "Generic bidirectional protocol code generator - Generate type-safe protocol code (C++, Java, etc.) from message definitions"
authors = [
    { name = "petitechose.audio", email = "contact@petitechose.audio" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["protocol", "sysex", "midi", "code-generator", "embedded", "communication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]

dependencies = [
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
protocol-codegen = "protocol_codegen.cli:main"

[project.urls]
Homepage = "https://github.com/petitechose-audio/protocol-codegen"
Repository = "https://github.com/petitechose-audio/protocol-codegen"
Issues = "https://github.com/petitechose-audio/protocol-codegen/issues"
Documentation = "https://github.com/petitechose-audio/protocol-codegen#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocol_codegen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=protocol_codegen --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
